--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,10 @@
 @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
-  
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  [type="checkbox"]:focus,
+  [type="text"]:focus {
+    --tw-ring-color: transparent;
+  }
+}
